--- a/Vegetables.html
+++ b/Vegetables.html
@@ -62,9 +62,9 @@
     </div>
 
     <div class="container" id="training" style="display: none;">
-        <img id="AnimalImage" src="" alt="Training">
+        <img id="VegetableImage" src="" alt="Training">
         <h2>தமிழில் காய்கறிகள்</h2>
-        <p id="AnimalName"></p>
+        <p id="VegetableName"></p>
     </div>
 
     <div class="container" id="thankYou" style="display: none;">
