--- a/Vehicles.html
+++ b/Vehicles.html
@@ -1,162 +1,173 @@
-<!-- Save as vehicles.html -->
 <!DOCTYPE html>
 <html lang="ta">
 <head>
-  <meta charset="UTF-8" />
-  <title>Vehicles in Tamil</title>
-  <script src="https://code.responsivevoice.org/responsivevoice.js?key=ng4M6EUA"></script>
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    html, body {
-      height: 100%; width: 100%;
-      font-family: 'Times New Roman', serif;
-      background-color: navy;
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .container {
-      width: 90%; max-width: 500px;
-      padding: 20px;
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 15px;
-      text-align: center;
-    }
-    button {
-      background-color: skyblue;
-      color: black;
-      border: none;
-      padding: 15px 25px;
-      font-size: 20px;
-      margin: 15px 0;
-      border-radius: 10px;
-      cursor: pointer;
-      width: 80%;
-    }
-    button:hover { background-color: deepskyblue; }
-    img {
-      width: 100%; max-width: 300px;
-      margin: 20px auto; display: block;
-      border-radius: 10px;
-    }
-    h1, h2, p { margin-bottom: 20px; }
-  </style>
+    <meta charset="UTF-8">
+    <title>Tamil Learning App</title>
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=ng4M6EUA"></script>
+    <style>
+         * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        html, body {
+            height: 100%;
+            width: 100%;
+            font-family: 'Times New Roman', serif;
+            background-color: darkblue;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .container {
+            width: 90%;
+            max-width: 500px;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 15px;
+            text-align: center;
+        }
+        button {
+            background-color: lightblue;
+            color: black;
+            border: none;
+            padding: 15px 25px;
+            font-size: 20px;
+            margin: 15px 0;
+            border-radius: 10px;
+            cursor: pointer;
+            width: 80%;
+        }
+        button:hover {
+            background-color: deepskyblue;
+        }
+        img {
+            width: 100%;
+            max-width: 300px;
+            margin: 20px auto;
+            display: block;
+            border-radius: 10px;
+        }
+        h1, h2, p {
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-  <div class="container" id="welcome">
-    <img src="assets/images/dashboard/vehicles.jpg" alt="Welcome">
-    <h1>வணக்கம்</h1>
-    <button onclick="loginUser()">தொடங்கவும்</button>
-  </div>
+    <div class="container" id="welcome">
+        <img src="assets/images/dashboard/VehicleFirstPage.jpeg" alt="Welcome">
+        <h1>வணக்கம்</h1>
+        <button onclick="loginUser()">உள்நுழை</button>
+    </div>
 
-  <div class="container" id="training" style="display: none;">
-    <img id="vehicleImage" src="" alt="Training">
-    <h2>தமிழில் வாகனங்கள்</h2>
-    <p id="vehicleName"></p>
-  </div>
+    <div class="container" id="training" style="display: none;">
+        <img id="VehicleImage" src="" alt="Training">
+        <h2>தமிழில் வாகனங்கள்</h2>
+        <p id="VehicleName"></p>
+    </div>
 
-  <div class="container" id="thankYou" style="display: none;">
-    <img src="assets/images/wallpapers/logo.png" alt="Thank You">
-    <h2>நன்றி! வாகனங்களை கற்றுக்கொண்டீர்கள்!</h2>
-  </div>
+    <div class="container" id="thankYou" style="display: none;">
+        <img src="assets/images/wallpapers/logo.png" alt="Thank You">
+        <h2>நன்றி! தமிழில் வாகனங்கள் நீங்கள் கற்றுக்கொண்டீர்கள்!</h2>
+    </div>
 
-  <script>
-    const vehicles = [
-      { name: "மோட்டார் சைக்கிள்", image: "assets/images/vehicles/motorcycle.jpg" },
-      { name: "கார்", image: "assets/images/vehicles/car.jpg" },
-      { name: "லாரி", image: "assets/images/vehicles/truck.jpg" },
-      { name: "பஸ்", image: "assets/images/vehicles/bus.jpg" },
-      { name: "வண்டி", image: "assets/images/vehicles/cart.jpg" },
-      { name: "விமானம்", image: "assets/images/vehicles/airplane.jpg" },
-      { name: "ரயில்", image: "assets/images/vehicles/train.jpg" },
-      { name: "கப்பல்", image: "assets/images/vehicles/ship.jpg" },
-      { name: "சைக்கிள்", image: "assets/images/vehicles/bicycle.jpg" },
-      { name: "ஹெலிகாப்டர்", image: "assets/images/vehicles/helicopter.jpg" }
-    ];
+    <script>
+        const vehicles = [
+            { name: "மிதிவண்டி", image: "assets/images/Vehicles/cycle.jpg" },
+            { name: "பைக்", image: "assets/images/Vehicles/bike.jpg" },
+            { name: "கார்", image: "assets/images/Vehicle/car.jpg" },
+            { name: "லாரி", image: "assets/images/Vehicles/lorry.jpg" },
+            { name: "விமானம்", image: "assets/images/Vehicles/aeroplane.jpg" },
+            { name: "ஆட்டோ", image: "assets/images/Vehicles/auto.jpg" },
+            { name: "படகு", image: "assets/images/Vehicles/boat.jpg" },
+            { name: "ஜீப்", image: "assets/images/Vehicles/jeep.jpg" },
+            { name: "வேன்", image: "assets/images/Vehicles/van.jpg" },
+            { name: "பேருந்து", image: "assets/images/Vehicles/bus.jpg" }
+        ];
 
-    const maxAttempts = 10;
-    let index = 0;
+        let index = 0;
+        const maxAttempts = 10;
 
-    function loginUser() {
-      alert("உள்நுழைவு வெற்றிகரமாக முடிந்தது!");
-      showPage("training");
-      startTraining();
-    }
-
-    function showPage(id) {
-      document.querySelectorAll(".container").forEach(el => el.style.display = "none");
-      document.getElementById(id).style.display = "block";
-    }
-
-    function speak(text) {
-      return new Promise(resolve => {
-        responsiveVoice.speak(text, "Tamil Female", { onend: resolve });
-      });
-    }
-
-    function listen() {
-      return new Promise((resolve, reject) => {
-        const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-        recognition.lang = "ta-IN";
-        recognition.interimResults = false;
-        recognition.maxAlternatives = 1;
-
-        let timeout = setTimeout(() => {
-          recognition.abort();
-          reject("timeout");
-        }, 10000);
-
-        recognition.onresult = (event) => {
-          clearTimeout(timeout);
-          resolve(event.results[0][0].transcript.trim());
-        };
-
-        recognition.onerror = () => {
-          clearTimeout(timeout);
-          reject("error");
-        };
-
-        recognition.start();
-      });
-    }
-
-    async function trainWord(wordObj) {
-      const { name, image } = wordObj;
-      document.getElementById("vehicleName").innerText = name;
-      document.getElementById("vehicleImage").src = image;
-
-      let attempts = 0;
-      while (attempts < maxAttempts) {
-        await speak(name);
-        try {
-          const userSaid = await listen();
-          if (userSaid === name) {
-            await speak("நன்றாகச் சொன்னீர்! அடுத்தது.");
-            return;
-          } else {
-            attempts++;
-            if (attempts < maxAttempts) {
-              await speak("மீண்டும் முயற்சி செய்யுங்கள்: " + name);
-            }
-          }
-        } catch (e) {
-          attempts++;
-          if (attempts < maxAttempts) {
-            await speak("தவறு. மீண்டும் முயற்சி செய்யுங்கள்: " + name);
-          }
+        function loginUser() {
+            alert("உள்நுழைவு வெற்றிகரமாக முடிந்தது!");
+            showPage("training");
+            startTraining();
         }
-      }
-      await speak("அடுத்த வார்த்தைக்கு செல்லலாம்.");
-    }
 
-    async function startTraining() {
-      for (let i = 0; i < vehicles.length; i++) {
-        await trainWord(vehicles[i]);
-      }
-      await speak("நன்றி! வாகனங்களை நீங்கள் கற்றுக்கொண்டீர்கள்!");
-      showPage("thankYou");
-    }
-  </script>
+        function showPage(id) {
+            document.querySelectorAll('.container').forEach(el => el.style.display = 'none');
+            document.getElementById(id).style.display = 'block';
+        }
+
+        function speak(text) {
+            return new Promise(resolve => {
+                responsiveVoice.speak(text, "Tamil Female", { onend: resolve });
+            });
+        }
+
+        function listen() {
+            return new Promise((resolve, reject) => {
+                const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+                recognition.lang = 'ta-IN';
+                recognition.interimResults = false;
+                recognition.maxAlternatives = 1;
+
+                let timeout = setTimeout(() => {
+                    recognition.abort();
+                    reject("timeout");
+                }, 10000);
+
+                recognition.onresult = (event) => {
+                    clearTimeout(timeout);
+                    resolve(event.results[0][0].transcript.trim());
+                };
+
+                recognition.onerror = () => {
+                    clearTimeout(timeout);
+                    reject("error");
+                };
+
+                recognition.start();
+            });
+        }
+
+        async function trainWord(wordObj) {
+            const { name, image } = wordObj;
+            document.getElementById("VehicleName").innerText = name;
+            document.getElementById("VehicleImage").src = image;
+
+            let attempts = 0;
+            while (attempts < maxAttempts) {
+                await speak(name);
+                try {
+                    const userSaid = await listen();
+                    if (userSaid === name) {
+                        await speak("நன்றாகப் பேசினீர்! அடுத்தது.");
+                        return;
+                    } else {
+                        attempts++;
+                        if (attempts < maxAttempts) {
+                            await speak("மீண்டும் முயற்சி செய்யுங்கள்: " + name);
+                        }
+                    }
+                } catch (e) {
+                    attempts++;
+                    if (attempts < maxAttempts) {
+                        await speak("தவறு ஏற்பட்டது. மீண்டும் முயற்சி செய்யுங்கள்: " + name);
+                    }
+                }
+            }
+            await speak("அடுத்த வார்த்தைக்கு செல்லலாம்.");
+        }
+
+        async function startTraining() {
+            for (let i = 0; i < vehicle.length; i++) {
+                await trainWord(vehicle[i]);
+            }
+            await speak("நன்றி! தமிழில் வாகனங்கள் நீங்கள் கற்றுக்கொண்டீர்கள்!");
+            showPage("thankYou");
+        }
+    </script>
 </body>
 </html>
