--- a/Testing-fruits.html
+++ b/Testing-fruits.html
@@ -60,7 +60,13 @@
         <h1>வணக்கம்</h1>
         <button onclick="loginUser()">உள்நுழை</button>
     </div>
-
+    
+    <div class="container" id="training" style="display: none;">
+        <img id="FruitsImage" src="" alt="Training">
+        <h2>தமிழில் பழங்கள்</h2>
+        <p id="FruitName"></p>
+    </div>
+    
     <div class="container" id="thankYou" style="display: none;">
         <img src="assets/images/wallpapers/logo.png" alt="Thank You">
         <h2>நன்றி! தமிழில் பழங்கள் நீங்கள் கற்றுக்கொண்டீர்கள்!</h2>
