--- a/Dinner.html
+++ b/Dinner.html
@@ -62,28 +62,29 @@
     </div>
 
     <div class="container" id="training" style="display: none;">
-        <img id="DinnerImage" src="" alt="Training">
+        <img id="BreakfastImage" src="" alt="Training">
         <h2>தமிழில் இரவு உணவு</h2>
-        <p id="DinnerName"></p>
+        <p id="BreakfastName"></p>
     </div>
 
     <div class="container" id="thankYou" style="display: none;">
         <img src="assets/images/wallpapers/logo.png" alt="Thank You">
-        <h2>நன்றி! தமிழில் இரவு உணவு வகைகள் நீங்கள் கற்றுக்கொண்டீர்கள்!</h2>
+        <h2>நன்றி! தமிழில் இரவு உணவு நீங்கள் கற்றுக்கொண்டீர்கள்!</h2>
     </div>
 
     <script>
         const breakfasts = [
             { name: "இட்லி", image: "assets/images/dashboard/இட்லி.jpg" },
             { name: "தோசை", image: "assets/images/dashboard/தோசை.jpg" },
-            { name: "சட்னி", image: "assets/images/dashboard/சட்னி.jpg" },
-            { name: "சாம்பார்", image: "assets/images/dashboard/சாம்பார்.jpg" },
             { name: "வடை", image: "assets/images/dashboard/வடை.jpg" },
-            { name: "கிச்சடி", image: "assets/images/dashboard/கிச்சடி.jpg" },
             { name: "சப்பாத்தி", image: "assets/images/dashboard/சப்பாத்தி.jpg" },
             { name: "பூரி", image: "assets/images/dashboard/பூரி.jpg" },
-            { name: "ஆப்பம்", image: "assets/images/dashboard/ஆப்பம்.jpg" }
+            { name: "பொங்கல்", image: "assets/images/dashboard/பொங்கல்.jpg" },
+            { name: "சட்னி", image: "assets/images/dashboard/சட்னி.jpg" },
+            { name: "சாம்பார்", image: "assets/images/dashboard/சாம்பார்.jpg" },
+            { name: "இடியாப்பம்", image: "assets/images/dashboard/இடியாப்பம்.jpeg" }
         ];
+
         let index = 0;
         const maxAttempts = 10;
 
@@ -132,8 +133,8 @@
 
         async function trainWord(wordObj) {
             const { name, image } = wordObj;
-            document.getElementById("DinnerName").innerText = name;
-            document.getElementById("DInnerImage").src = image;
+            document.getElementById("BreakfastName").innerText = name;
+            document.getElementById("BreakfastImage").src = image;
 
             let attempts = 0;
             while (attempts < maxAttempts) {
@@ -160,10 +161,10 @@
         }
 
         async function startTraining() {
-            for (let i = 0; i < dinner.length; i++) {
-                await trainWord(dinner[i]);
+            for (let i = 0; i < breakfasts.length; i++) {
+                await trainWord(breakfasts[i]);
             }
-            await speak("நன்றி! தமிழில் இரவு உணவு வகைகள் நீங்கள் கற்றுக்கொண்டீர்கள்!");
+            await speak("நன்றி! தமிழில் இரவு உணவு நீங்கள் கற்றுக்கொண்டீர்கள்!");
             showPage("thankYou");
         }
     </script>
