--- a/Numbers.html
+++ b/Numbers.html
@@ -82,8 +82,7 @@
             { name: "ஆறு", image: "assets/images/Numbers/Number 6.jpeg" },
             { name: "ஏழு", image: "assets/images/Numbers/Number 7.jpeg" },
             { name: "எட்டு", image: "assets/images/Numbers/Number 8.jpeg" },
-            { name: "ஒன்பது", image: "assets/images/Number/Number 9.jpeg" },
-            { name: "பத்து", image: "assets/images/Numbers/Number 10.jpeg" }
+            { name: "ஒன்பது", image: "assets/images/Number/Number 9.jpeg" }
         ];
 
         let index = 0;
